tests/ui/parse/gated_closure.rx
//@ spec: RXS-0031, RXS-0026
fn f() {
    let g = |x: i32| x; //~ ERROR RX0010
}
